# ai-toolkit

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
agents/sql2graph/: .dockerignore  .env.example  Dockerfile  Dockerfile.local  LICENSE  PROMPT.md  README.md  __init__.py  main.py  pyproject.toml
agents/sql2graph/core/: __init__.py  migration_agent.py
agents/sql2graph/core/hygm/: __init__.py  hygm.py
agents/sql2graph/core/hygm/models/: __init__.py  graph_models.py  llm_models.py  operations.py  sources.py  user_operations.py
agents/sql2graph/core/hygm/strategies/: base.py  deterministic.py  llm.py
agents/sql2graph/core/hygm/validation/: __init__.py  base.py  graph_schema_validator.py  memgraph_data_validator.py
agents/sql2graph/core/utils/: meta_graph.py
agents/sql2graph/database/: __init__.py  analyzer.py  factory.py  models.py
agents/sql2graph/database/adapters/: memgraph.py  mysql.py  postgresql.py
agents/sql2graph/examples/: basic_migration.py
agents/sql2graph/query_generation/: cypher_generator.py  schema_utilities.py
agents/sql2graph/skills/: build-and-or-publish-docker.md  publish-dockerhub.md  running-under-docker-in-background.md
agents/sql2graph/tests/: test_integration.py
agents/sql2graph/utils/: __init__.py  config.py  environment.py
context-graph/actions-graph/: README.md  pyproject.toml
context-graph/actions-graph/src/actions_graph/: __init__.py  connector.py  core.py  hooks.py  models.py
context-graph/actions-graph/tests/: __init__.py  test_connector.py  test_e2e.py  test_hooks.py  test_models.py
context-graph/agent-graph/: README.md  pyproject.toml
context-graph/agent-graph/src/agent_graph/: __init__.py  link.py  protocols.py
context-graph/agent-graph/src/agent_graph/adapters/: claude.py  openai.py
context-graph/agent-graph/tests/: test_events.py  test_link.py
context-graph/sessions-graph/: README.md  pyproject.toml
context-graph/sessions-graph/src/sessions_graph/: __init__.py  connector.py  core.py  models.py
context-graph/sessions-graph/tests/: test_sessions_graph.py
context-graph/skill-graph/: LICENSE  README.md  pyproject.toml
context-graph/skill-graph/src/skill_graph/: __init__.py  models.py  skill_graph.py
context-graph/skill-graph/tests/: test_e2e.py  test_models.py  test_skill_graph.py
context-graph/skills-graph/: README.md  pyproject.toml
context-graph/skills-graph/src/skills_graph/: __init__.py  connector.py  core.py  models.py
context-graph/skills-graph/tests/: test_connector.py  test_connector_e2e.py  test_e2e.py  test_models.py  test_skill_graph.py
enterprise-context/agent-memory/: README.md  pyproject.toml
enterprise-context/agent-memory/tests/: conftest.py  test_cognee.py  test_mem0.py  test_neo4j_agent_memory.py
enterprise-context/sic-agent/: pyproject.toml
enterprise-context/sic-agent/sic-scrapper/: README.md  main.py  pyproject.toml  requirements.txt
enterprise-context/sic-retrival/sic-scrapper/: README.md  pyproject.toml
evaluations/: README.md  __init__.py  main.py  pyproject.toml
experiments/lightrag/: .gitignore  README.md  main.py  pyproject.toml
experiments/lightrag/src/lightrag_memgraph/: __init__.py  core.py  insert.py  search.py
experiments/llm-model-resolver/: pyproject.toml
experiments/llm-model-resolver/src/llm_model_resolver/: README.md  __init__.py  base.py  deepeval_resolver.py  litellm_resolver.py
experiments/llm-model-resolver/tests/: __init__.py  test_resolvers.py
experiments/mcp-prompt-lib/: README.md  main.py  pyproject.toml
experiments/mcp-prompt-lib/src/mcp_prompt_lib/: __init__.py  prompt_lib.py
experiments/prompt-evals/: README.md  main.py  metrics_aggregator.py  pyproject.toml  sample_prompts.csv
integrations/lightrag-memgraph/: README.md  example.py  main.py  pyproject.toml
integrations/lightrag-memgraph/src/lightrag_memgraph/: __init__.py  _connection.py  core.py  docstatus_impl.py  embeddings.py  kv_impl.py  registry.py  vector_impl.py
integrations/lightrag-memgraph/tests/: test_core.py  test_embeddings.py  test_import.py  test_integration_memgraph.py  test_storages.py
integrations/mcp-memgraph/: Dockerfile  PROMPT.md  README.md  pyproject.toml  server.py
integrations/mcp-memgraph/src/mcp_memgraph/: __init__.py  auth.py  config.py  experimental_server.py  main.py  middleware.py  server.py  tenant_routing.py
integrations/mcp-memgraph/src/mcp_memgraph/servers/: __init__.py  docs_server.py  experimental.py  graphrag.py  server.py  (+2 more)
integrations/mcp-memgraph/tests/: conftest.py  connection.py  test_auth.py  test_dcr_intercept.py  test_server.py  test_tenant_switching.py  test_tool_annotations.py
memgraph-toolbox/: README.md  pyproject.toml  test.py
memgraph-toolbox/src/memgraph_toolbox/: __init__.py  memgraph_toolbox.py  toolbox.py
memgraph-toolbox/src/memgraph_toolbox/api/: memgraph.py  tool.py  toolbox.py
memgraph-toolbox/src/memgraph_toolbox/client/: fastmcp_client.py  mcp_full.py  mcp_prompt.py  tools.py
memgraph-toolbox/src/memgraph_toolbox/evals/: __init__.py  coherence.py  coherence_embeddings_based.py
memgraph-toolbox/src/memgraph_toolbox/tests/: test_async_memgraph.py  test_embedding.py  test_eval_coherence.py  test_memgraph_config.py  test_toolbox.py  test_tools.py
memgraph-toolbox/src/memgraph_toolbox/tools/: __init__.py  betweenness_centrality.py  config.py  constraint.py  cypher.py  index.py  node_neighborhood.py  node_vector_search.py  page_rank.py  procedures.py  schema.py  storage.py  trigger.py
memgraph-toolbox/src/memgraph_toolbox/utils/: embedding.py  logger.py  logging.py
memgraph-toolbox/tests/: test_coherence_metric.py
unstructured2graph/: README.md  examples.py  graphrag.py  loaders.py  memgraph.py  parsers.py  pyproject.toml
unstructured2graph/examples/: documentation_graphrag.py  graphrag.py  loading.py  prompt_templates.py  sources.py
unstructured2graph/spec/: sso-design.md  sso-shared-token-patch.md  sso-shared-token.md
unstructured2graph/src/unstructured2graph/: __init__.py  loaders.py  memgraph.py
unstructured2graph/tests/: test_loaders.py  test_memgraph.py
(+217 files in other folders)
