[project]
name = "evaluations"
version = "0.1.0"
description = "Knowledge Retrieval Evaluation Tools"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["evaluations"]

[tool.hatch.metadata]
allow-direct-references = true
