[project]
name = "memgraph-toolbox"
version = "0.1.10"
description = "Memgraph toolbox library for Memgraph AI tools and utilities"
readme = "README.md"
authors = [
  { name = "antejavor", email = "ante.javor@memgraph.io" }
]
license = { text = "MIT" }
requires-python = ">=3.10"

keywords = ["memgraph", "graph", "ai", "toolkit"]

classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

dependencies = [
  "neo4j>=5.28.1",
  "numpy>=2.2.6",
]

[project.optional-dependencies]
evaluations = [
  "deepeval>=3.5.2",
  "sentence-transformers>=5.1.0",
  "torch>=2.8.0",
]
client = [
  "litellm>=1.83.0",
  "mcp>=1.23.0",
]
test = [
  "pytest>=9.0.3",
  "pytest-asyncio>=0.26.0",
]

[project.urls]
"Homepage" = "https://github.com/memgraph/ai-toolkit"
"Source" = "https://github.com/memgraph/ai-toolkit"
"Issues" = "https://github.com/memgraph/ai-toolkit/issues"

[build-system]
requires = ["hatchling", "build"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"

[tool.uv]
constraint-dependencies = [
  "aiohttp>=3.13.4",
  "certifi>=2025.1.31",
  "filelock>=3.20.3",
  "pillow>=12.2.0",
  "protobuf>=6.33.5",
  "pyasn1>=0.6.3",
  "pyjwt>=2.10.1",
  "python-multipart>=0.0.22",
  "requests>=2.33.0",
  "starlette>=0.49.1",
  "transformers>=5.0.0rc3",
  "urllib3>=2.6.3",
  "wheel>=0.46.2",
]
