[project]
name = "unstructured2graph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "pdfplumber>=0.11.7",
    "python-docx>=1.2.0",
    "requests>=2.31.0",
    "unstructured[all-docs]>=0.12.6",
    "tqdm>=4.65.0",
]
