[project]
name = "unstructured2graph"
version = "0.1.0"
description = "Convert unstructured documents into knowledge graphs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "unstructured[all-docs]>=0.12.6",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# Logging configuration - set log_cli_level to INFO to see logs during test execution
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(name)s: %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
# Capture logs for all tests
log_capture = true
