[project]
name = "structured2graph"
version = "0.2.1"
description = "Database migration agent from structured data (e.g. SQL) to graph."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Memgraph", email = "tech@memgraph.com" },
]
maintainers = [
    { name = "Memgraph", email = "tech@memgraph.com" },
]
keywords = [
    "memgraph",
    "graph-database",
    "database-migration",
    "sql-to-graph",
    "knowledge-graph",
    "etl",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "langgraph>=1.0.10",
    "langchain>=1.0.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langchain-core>=1.2.28",
    "mysql-connector-python>=9.0.0",
    "psycopg2-binary>=2.9.6",
    "neo4j>=5.28.1",
    "openai>=1.0.0",
    "anthropic>=0.40.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "sqlalchemy>=2.0.0",
    "pymysql>=1.1.0",
    "memgraph-toolbox>=0.1.10",
]

[project.urls]
Homepage = "https://github.com/memgraph/ai-toolkit"
Repository = "https://github.com/memgraph/ai-toolkit"
Issues = "https://github.com/memgraph/ai-toolkit/issues"
Documentation = "https://github.com/memgraph/ai-toolkit/tree/main/agents/sql2graph"

[project.scripts]
structured2graph = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "database", "query_generation", "utils"]

[tool.hatch.build.targets.wheel.force-include]
"main.py" = "main.py"
"__init__.py" = "__init__.py"

[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.uv]
constraint-dependencies = [
    "certifi>=2025.1.31",
    "langgraph-checkpoint>=4.0.0",
    "langsmith>=0.6.3",
    "protobuf>=6.33.5",
    "pyasn1>=0.6.3",
    "pyjwt>=2.10.1",
    "requests>=2.33.0",
    "urllib3>=2.6.3",
]
