[project]
name = "sessions-graph"
version = "0.1.1"
description = "Cross-session memory store for agents, backed by Memgraph"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
    "memgraph-toolbox",
]

[project.optional-dependencies]
agent-context-graph = [
    "agent-context-graph>=0.1.4",
]
test = [
    "pytest>=9.0.3",
]

[tool.uv.sources]
agent-context-graph = { workspace = true }
memgraph-toolbox = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
