[project]
name = "skills-graph"
version = "0.1.0"
description = "Persist, retrieve and evolve AI skills in Memgraph"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "memgraph-toolbox",
]

[project.optional-dependencies]
test = [
    "pytest>=9.0.3",
]

[tool.uv.sources]
memgraph-toolbox = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
