[project]
name = "skills-graph"
version = "0.1.0"
description = "Persist, retrieve and evolve AI skills in Memgraph"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
    "memgraph-toolbox",
]

[project.optional-dependencies]
agent-graph = [
    "agent-graph",
]
test = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.24.0",
    "openai-agents>=0.1.0",
]

[tool.uv.sources]
memgraph-toolbox = { workspace = true }
agent-graph = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
