[project]
name = "lightrag-memgraph"
version = "0.1.18"
description = "LightRAG integration with Memgraph for knowledge graph-based RAG"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # "lightrag-hku[api] @ file:///home/buda/Workspace/tmp/LightRAG",
    "lightrag-hku[api]>=0.0.1",
    "openai>=1.0.0",
    "neo4j>=5.0.0",
    "accelerate>=1.10.1",
    "torch>=2.8.0",
    "flash-attn>=2.8.3",
    "transformers<=4.48.3",
    # "bitsandbytes>=0.47.0", # NOTE: Doesn't work on Mac
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[tool.uv.extra-build-dependencies]
flash-attn = ["torch"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lightrag_memgraph"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
