[project]
name = "llm-model-resolver"
version = "0.1.0"
description = "A library for resolving model names and configurations across different AI frameworks"
authors = [
    {name = "Memgraph AI Toolkit", email = "tech@memgraph.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "deepeval>=0.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_model_resolver"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
