[project]
name = "mcp-prompt-lib"
version = "0.1.2"
description = "A library for running prompts with MCP tools"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp",
    "litellm",
    "openai",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_prompt_lib"]

[tool.hatch.metadata]
allow-direct-references = true
