[project]
name = "prompt-evals"
version = "0.1.0"
description = "Prompt evaluation scripts using MCP tools"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp-prompt-lib",
    "deepeval",
    "llm-model-resolver",
    "numpy>=2.3.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["main.py"]

[tool.hatch.metadata]
allow-direct-references = true
