[project]
name = "sic-scrapper"
version = "0.1.0"
description = "OSHA SIC Manual Scraper - Scrapes SIC codes and generates embeddings for Memgraph"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
    "sentence-transformers>=2.2.0",
    "numpy>=1.21.0",
]

[project.optional-dependencies]
db = ["gqlalchemy>=1.4.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["main.py", "embeddings.py"]
